Dodanie ngx-tetris, wstepna logika w komponencie gry

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,8 @@
   (isUserValid)="onUserValidation($event)"
   *ngIf="!isUserValid"
 ></app-intro-page>
-<app-game-page *ngIf="isUserValid"></app-game-page>
+<app-game-page
+  *ngIf="isUserValid"
+  [username]="username"
+  (return)="onReturn()"
+></app-game-page>
