--- a/src/app/components/game-page/game-page.component.html
+++ b/src/app/components/game-page/game-page.component.html
@@ -1,1 +1,21 @@
-<p>game-page works!</p>
+<div>
+  <h1>{{ "Hello " + username }}</h1>
+  <button (click)="onReturnToHomePage()">Powrót do strony głównej</button>
+  <div>
+    <div>
+      <p>Ready</p>
+      <p>Started</p>
+
+      <p>Paused</p>
+    </div>
+    <tetris-core #game></tetris-core>
+
+    <button (click)="game.actionStart()">Start</button>
+    <button (click)="game.actionStop()">Stop</button>
+    <button (click)="game.actionReset()">Reset</button>
+    <button (click)="game.actionRotate()">Rotate</button>
+    <button (click)="game.actionLeft()">Left</button>
+    <button (click)="game.actionRight()">Right</button>
+    <button (click)="game.actionDown()">Down</button>
+  </div>
+</div>
