Formatowanie kodu, ostatnie poprawki przed codereview

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="dark app-container">
   <app-intro-page
-    (isUserValid)="onUserValidation($event)"
+    (takeValidUserToGamePage)="onTakeValidUSerToGamePage($event)"
     *ngIf="!isUserValid"
   ></app-intro-page>
   <app-game-page
