--- a/src/app/components/game-page/game-history-table/game-history-table.component.html
+++ b/src/app/components/game-page/game-history-table/game-history-table.component.html
@@ -4,10 +4,8 @@
       <th>Action</th>
       <th>
         Date
-
-        <i class="bi bi-arrow-down" (click)="changeDirToAsc()"></i>
-
-        <i class="bi bi-arrow-up" (click)="changeDirToDesc()"></i>
+        <i class="bi bi-arrow-down" (click)="dir = 'asc'"></i>
+        <i class="bi bi-arrow-up" (click)="dir = 'desc'"></i>
       </th>
     </tr>
   </thead>
