--- a/src/app/components/game-page/game-actions/game-actions.component.html
+++ b/src/app/components/game-page/game-actions/game-actions.component.html
@@ -3,17 +3,17 @@
     <div class="sm-6 col">
       <tetris-core
         #game
-        (lineCleared)="onLineCleared(); pushLineClearedToHistory()"
+        (lineCleared)="lineCleared.emit(); pushLineClearedToHistory.emit()"
       ></tetris-core>
     </div>
     <div class="sm-6 col action-buttons">
-      <button (click)="game.actionStart(); onGameStateChange(gameStates[0])">
+      <button (click)="game.actionStart(); gameStateChange.emit(gameStates[0])">
         Start
       </button>
-      <button (click)="game.actionStop(); onGameStateChange(gameStates[1])">
+      <button (click)="game.actionStop(); gameStateChange.emit(gameStates[1])">
         Stop
       </button>
-      <button (click)="game.actionReset(); onGameStateChange(gameStates[2])">
+      <button (click)="game.actionReset(); gameStateChange.emit(gameStates[2])">
         Reset
       </button>
       <button (click)="game.actionRotate()">Rotate</button>
