Changes in GameStatusService

--- a/src/app/components/game-page/game-actions/game-actions.component.html
+++ b/src/app/components/game-page/game-actions/game-actions.component.html
@@ -1,35 +1,17 @@
 <div class="card">
   <div class="row flex-center">
     <div class="sm-6 col">
-      <tetris-core
-        #game
-        (lineCleared)="lineCleared.emit(); pushLineClearedToHistory.emit()"
-      ></tetris-core>
+      <tetris-core #game (lineCleared)="onLineCleared()"></tetris-core>
     </div>
     <div class="sm-6 col action-buttons">
-      <button (click)="game.actionStart(); gameStateChange.emit(gameStates[0])">
-        Start
-      </button>
-      <button (click)="game.actionStop(); gameStateChange.emit(gameStates[1])">
-        Stop
-      </button>
-      <button
-        (click)="
-          game.actionReset();
-          gameStateChange.emit(gameStates[2]);
-          endGame.emit()
-        "
-      >
-        Reset
-      </button>
+      <button (click)="onStartGame()">Start</button>
+      <button (click)="onStopGame()">Stop</button>
+      <button (click)="onResetGame()">Reset</button>
       <button (click)="game.actionRotate()">Rotate</button>
       <button (click)="game.actionLeft()">Left</button>
       <button (click)="game.actionRight()">Right</button>
       <button (click)="game.actionDown()">Down</button>
-      <app-game-status
-        [gameStatus]="gameStatus"
-        [seconds]="seconds"
-      ></app-game-status>
+      <app-game-status [seconds]="seconds"></app-game-status>
     </div>
   </div>
 </div>
