--- a/src/app/components/game-page/game-status/game-status.component.html
+++ b/src/app/components/game-page/game-status/game-status.component.html
@@ -1,6 +1,6 @@
 <div class="row flex-center">
   <div class="sm-6 col">
-    <h4>{{ "Game " + gameStatus }}</h4>
+    <h4>{{ "Game " + (gameStatus$ | async) }}</h4>
   </div>
   <div class="sm-6 col text-center m-auto">
     <div class="paper-switch-tile-card border">
