sorting high scores data from server

--- a/src/app/components/game-page/high-scores/high-scores-table/high-scores-table.component.html
+++ b/src/app/components/game-page/high-scores/high-scores-table/high-scores-table.component.html
@@ -12,7 +12,7 @@
   <tbody>
     <tr *ngFor="let score of highScores">
       <td>Game {{ score.name }}</td>
-      <td>{{ score.points }}</td>
+      <td>{{ score.score }}</td>
     </tr>
   </tbody>
 </table>
