--- a/src/app/components/game-page/game-page.component.html
+++ b/src/app/components/game-page/game-page.component.html
@@ -15,7 +15,7 @@
     </div>
   </div>
 
-  <app-game-scores [points]="points$ | async"></app-game-scores>
+  <app-game-scores [points]="points"></app-game-scores>
 
   <app-game-actions
     (lineCleared)="onLineCleared()"
