--- a/src/app/components/game-page/game-page.component.html
+++ b/src/app/components/game-page/game-page.component.html
@@ -9,6 +9,7 @@
         [selectedAction]="selectedAction"
         [gameHistory]="gameHistory"
       ></app-game-history>
+      <app-my-scores></app-my-scores>
       <button class="btn-secondary" (click)="onReturnToHomePage()">
         Exit game
       </button>
