--- a/src/app/components/game-page/game-status/game-status.component.html
+++ b/src/app/components/game-page/game-status/game-status.component.html
@@ -1,12 +1,7 @@
-<div class="row flex-center">
-  <div class="sm-6 col">
-    <h4>{{ "Game " + (gameStatus$ | async) }}</h4>
-  </div>
-  <div class="sm-6 col text-center m-auto">
-    <div class="paper-switch-tile-card border">
-      <div class="paper-switch-tile-card-front border background-secondary">
-        {{ seconds + " sec" }}
-      </div>
-    </div>
-  </div>
+<div class="flex-center">
+  <h5 class="mb-1">{{ "Game " + (gameStatus$ | async) }}</h5>
+
+  <p>
+    {{ seconds + " sec" }}
+  </p>
 </div>
