--- a/src/app/components/game-page/game-history/game-history.component.html
+++ b/src/app/components/game-page/game-history/game-history.component.html
@@ -1,5 +1,5 @@
 <label class="paper-btn btn-secondary" for="game-history"
-  >Open My Game History</label
+  >My Game History</label
 >
 <input class="modal-state" id="game-history" type="checkbox" />
 <div class="modal">
