--- a/src/app/components/game-page/high-scores/high-scores.component.html
+++ b/src/app/components/game-page/high-scores/high-scores.component.html
@@ -4,7 +4,7 @@
   <label class="modal-bg" for="high-scores"></label>
   <div class="modal-body">
     <label class="btn-close" for="high-scores">X</label>
-    <h4 class="modal-title">Game History</h4>
+    <h4 class="modal-title">High Scores</h4>
     <p class="modal-text">
       <app-high-scores-table [highScores]="highScores"></app-high-scores-table>
     </p>
