Add dark mode, add guard, set user info in local storage

--- a/src/app/components/game-page/game-actions/game-actions.component.html
+++ b/src/app/components/game-page/game-actions/game-actions.component.html
@@ -1,6 +1,7 @@
 <div class="row flex-center">
   <div class="col-3">
     <tetris-core
+      [class.black-and-white]="color === gameModes.High"
       class="black-and-white"
       #game
       (lineCleared)="onLineCleared()"
