--- a/src/app/components/game-page/game-page.component.html
+++ b/src/app/components/game-page/game-page.component.html
@@ -22,8 +22,8 @@
     class="justify-content-center"
     (lineCleared)="onLineCleared()"
     (gameStateChange)="onGameStateChange($event)"
-    (endGame)="onGameEnd()"
     [gameStatus]="gameStatus"
     [seconds]="seconds"
+    [color]="color"
   ></app-game-actions>
 </div>
