--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://unpkg.com/papercss/dist/paper.min.css");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
+.black-and-white {
+  tile {
+    background: white;
+    &.color-box {
+      background: #000000;
+    }
+  }
+}
